--- a/css/style.css
+++ b/css/style.css
@@ -47,7 +47,7 @@ body>header nav li a {
 }
 
 #itemCount {
-  color: #222;
+  color: #ccc;
   font-size: .75em;
   line-height: 1em;
   margin-left: -.5em;
