--- a/css/style.css
+++ b/css/style.css
@@ -205,3 +205,24 @@ label span {
   color: red;
   cursor: pointer;
 }
+
+body header {
+  background-color: #000;
+}
+
+body header {
+  animation-duration: 3s;
+  animation-name: slidein;
+}
+
+@keyframes slidein {
+  from {
+    margin-left: 100%;
+    width: 300%;
+  }
+
+  to {
+    margin-left: 0%;
+    width: 100%;
+  }
+}
